// Vitest Snapshot v1

exports[`migrate: e2e > Print debug messages with verbose 1`] = `
"[32minfo[39m:    
[STARTED] Initialize
[DATA] Running migration on basic
[SUCCESS] Initialize
[STARTED] Install dependencies
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending Rehearsal default typescript-related config
[SUCCESS] Create eslint config
[STARTED] Add package scripts
[SUCCESS] Add package scripts
[STARTED] Convert JS files to TS
[34mdebug[39m:   migration started
[34mdebug[39m:   Base path: <tmp-path>
[34mdebug[39m:   sourceFiles: [\\"<tmp-path>/foo.js\\",\\"<tmp-path>/depends-on-foo.js\\",\\"<tmp-path>/index.js\\"]
[DATA] git mv /foo.js to /foo.ts
[DATA] git mv /depends-on-foo.js to /depends-on-foo.ts
[DATA] git mv /index.js to /index.ts
[34mdebug[39m:   config file: <tmp-path>/tsconfig.json
[34mdebug[39m:   fileNames: [\\"<tmp-path>/foo.ts\\",\\"<tmp-path>/depends-on-foo.ts\\",\\"<tmp-path>/index.ts\\"]
[DATA] processing file: /foo.ts
[DATA] processing file: /depends-on-foo.ts
[DATA] processing file: /index.ts
[TITLE] Migration Complete
[TITLE] 
[TITLE] 
[TITLE]   3 JS files converted to TS
[TITLE] 
[TITLE]   2 errors caught by rehearsal
[TITLE] 
[TITLE]   1 have been fixed by rehearsal
[TITLE] 
[TITLE]   1 errors need to be fixed manually
[TITLE] 
[TITLE]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE] 
[TITLE]     -- 1 eslint errors, with details in the report
[TITLE] 
[SUCCESS] Migration Complete
[SUCCESS] 
[SUCCESS] 
[SUCCESS]   3 JS files converted to TS
[SUCCESS] 
[SUCCESS]   2 errors caught by rehearsal
[SUCCESS] 
[SUCCESS]   1 have been fixed by rehearsal
[SUCCESS] 
[SUCCESS]   1 errors need to be fixed manually
[SUCCESS] 
[SUCCESS]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS] 
[SUCCESS]     -- 1 eslint errors, with details in the report
[SUCCESS] "
`;

exports[`migrate: e2e > againt specific basePath via -basePath option 1`] = `
"[32minfo[39m:    
[STARTED] Initialize
[DATA] Running migration on base
[SUCCESS] Initialize
[STARTED] Install dependencies
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending Rehearsal default typescript-related config
[SUCCESS] Create eslint config
[STARTED] Add package scripts
[SUCCESS] Add package scripts
[STARTED] Convert JS files to TS
[DATA] git mv /index.js to /index.ts
[DATA] processing file: /index.ts
[TITLE] Migration Complete
[TITLE] 
[TITLE] 
[TITLE]   1 JS file converted to TS
[TITLE] 
[TITLE]   7 errors caught by rehearsal
[TITLE] 
[TITLE]   3 have been fixed by rehearsal
[TITLE] 
[TITLE]   4 errors need to be fixed manually
[TITLE] 
[TITLE]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE] 
[TITLE]     -- 4 eslint errors, with details in the report
[TITLE] 
[SUCCESS] Migration Complete
[SUCCESS] 
[SUCCESS] 
[SUCCESS]   1 JS file converted to TS
[SUCCESS] 
[SUCCESS]   7 errors caught by rehearsal
[SUCCESS] 
[SUCCESS]   3 have been fixed by rehearsal
[SUCCESS] 
[SUCCESS]   4 errors need to be fixed manually
[SUCCESS] 
[SUCCESS]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS] 
[SUCCESS]     -- 4 eslint errors, with details in the report
[SUCCESS] "
`;

exports[`migrate: e2e > againt specific basePath via -basePath option 2`] = `
"export function run(baz: any) {
  return foo(baz);
}

function foo(_baz: any) {
  throw new Error(\\"Function not implemented.\\");
}
"
`;

exports[`migrate: e2e > againt specific basePath via -basePath option 3`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "compilerOptions": {
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "es2020",
    "moduleResolution": "node",
    "newLine": "lf",
    "noEmit": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedIndexedAccess": true,
    "strict": true,
    "target": "ES2021",
  },
  "include": [
    "index.ts",
  ],
}
`;

exports[`migrate: e2e > againt specific basePath via -basePath option 4`] = `
"module.exports = {
  extends: [\\"./.rehearsal-eslintrc.js\\"],
};
"
`;

exports[`migrate: e2e > againt specific basePath via -basePath option 5`] = `
"module.exports = {
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [
    \\"@typescript-eslint\\",
    \\"prettier\\"
  ],
  \\"extends\\": [
    \\"plugin:@typescript-eslint/eslint-recommended\\",
    \\"plugin:@typescript-eslint/recommended\\",
    \\"eslint:recommended\\",
    \\"plugin:prettier/recommended\\",
    \\"prettier\\"
  ]
}"
`;

exports[`migrate: e2e > default migrate command 1`] = `
"[32minfo[39m:    
[STARTED] Initialize
[DATA] Running migration on basic
[SUCCESS] Initialize
[STARTED] Install dependencies
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending Rehearsal default typescript-related config
[SUCCESS] Create eslint config
[STARTED] Add package scripts
[SUCCESS] Add package scripts
[STARTED] Convert JS files to TS
[DATA] git mv /foo.js to /foo.ts
[DATA] git mv /depends-on-foo.js to /depends-on-foo.ts
[DATA] git mv /index.js to /index.ts
[DATA] processing file: /foo.ts
[DATA] processing file: /depends-on-foo.ts
[DATA] processing file: /index.ts
[TITLE] Migration Complete
[TITLE] 
[TITLE] 
[TITLE]   3 JS files converted to TS
[TITLE] 
[TITLE]   2 errors caught by rehearsal
[TITLE] 
[TITLE]   1 have been fixed by rehearsal
[TITLE] 
[TITLE]   1 errors need to be fixed manually
[TITLE] 
[TITLE]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE] 
[TITLE]     -- 1 eslint errors, with details in the report
[TITLE] 
[SUCCESS] Migration Complete
[SUCCESS] 
[SUCCESS] 
[SUCCESS]   3 JS files converted to TS
[SUCCESS] 
[SUCCESS]   2 errors caught by rehearsal
[SUCCESS] 
[SUCCESS]   1 have been fixed by rehearsal
[SUCCESS] 
[SUCCESS]   1 errors need to be fixed manually
[SUCCESS] 
[SUCCESS]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS] 
[SUCCESS]     -- 1 eslint errors, with details in the report
[SUCCESS] "
`;

exports[`migrate: e2e > default migrate command 2`] = `
"export function foo(name = \\"World\\") {
  return \`Hello \${name}\`;
}
"
`;

exports[`migrate: e2e > default migrate command 3`] = `
"import { foo } from \\"./foo\\";

console.log(foo(\\"hello\\"));
"
`;

exports[`migrate: e2e > default migrate command 4`] = `
"import { foo } from \\"./foo\\";

export function run(baz: string | undefined) {
  return foo(baz);
}
"
`;

exports[`migrate: e2e > default migrate command 5`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "compilerOptions": {
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "es2020",
    "moduleResolution": "node",
    "newLine": "lf",
    "noEmit": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedIndexedAccess": true,
    "strict": true,
    "target": "ES2021",
  },
  "include": [
    "foo.ts",
    "depends-on-foo.ts",
    "index.ts",
  ],
}
`;

exports[`migrate: e2e > default migrate command 6`] = `
"module.exports = {
  extends: [\\"./.rehearsal-eslintrc.js\\"],
};
"
`;

exports[`migrate: e2e > default migrate command 7`] = `
"module.exports = {
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [
    \\"@typescript-eslint\\",
    \\"prettier\\"
  ],
  \\"extends\\": [
    \\"plugin:@typescript-eslint/eslint-recommended\\",
    \\"plugin:@typescript-eslint/recommended\\",
    \\"eslint:recommended\\",
    \\"plugin:prettier/recommended\\",
    \\"prettier\\"
  ]
}"
`;
